--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,9 @@
       "homepage": "https://www.multisafepay.com"
     }
   ],
+  "autoload": {
+    "psr-4": { "MultiSafepayAPI\\": "models/API" }
+  },
   "minimum-stability": "stable",
   "require": {
     "php": ">=5.3.0"
